# twedia

./: Cargo.toml  README.md  REUSE.toml  flake.nix
src/: fs.rs  main.rs  media.rs  paths.rs  utils.rs
src/media/: mod.rs  player.rs  preview.rs  tests.rs
