[package]
name = "twedia"
description = "the video editor for your pocket!"
version = "0.1.0"
edition = "2024"

[package.metadata.bundle]
identifier = "io.github.Elec3137.twedia"
linux_mime_types = [
  "video/matroshka",
  "video/webm",
  "video/mp4",

  "audio/matroshka",
  "audio/webm",
  "audio/mp4",

  "audio/aac",
  "audio/flac",
  "audio/ogg",
]

[dependencies]
ffmpeg-next = "8.0.0"
iced = { version = "0.14.0", features = ["image-without-codecs", "smol"] }
iced_runtime = "0.14.0"
rfd = "0.17.2"
smol = "2.0.2"
